--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack --mode=development --watch",
-    "server": "nodemon server/server.js"
+    "server": "nodemon server/server.js",
+    "seed": "node db/seed.js"
   },
   "repository": {
     "type": "git",
@@ -21,7 +22,9 @@
   "homepage": "https://github.com/Team-Kylo/Product-Details#readme",
   "dependencies": {
     "axios": "^0.19.2",
+    "eslint-config-airbnb": "^18.0.1",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "mongodb": "^3.5.2",
     "mongoose": "^5.8.9",
     "nodemon": "^2.0.2",
