--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "jest": "^25.1.0",
     "supertest": "^4.0.2",
     "webpack": "^4.41.5",
