--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --detectOpenHandles",
-    "test:watch": "jest --watch",
+    "test": "jest --coverage --detectOpenHandles",
+    "test:watch": "jest --verbose --watch",
+    "test:coverage": "jest --verbose --coverage",
     "start": "webpack --mode=development --watch",
     "server": "nodemon server/server.js",
-    "seed": "node db/seed.js"
+    "seed": "node db/seed.js",
+    "test:seed": "node testSeed.js"
   },
   "repository": {
     "type": "git",
@@ -29,14 +31,17 @@
     "mongodb": "^3.5.2",
     "mongoose": "^5.8.9",
     "nodemon": "^2.0.2",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "regenerator-runtime": "^0.13.3",
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
+    "@shelf/jest-mongodb": "^1.1.3",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "enzyme": "^3.11.0",
