--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage --detectOpenHandles",
+    "test": "jest --coverage --detectOpenHandles  --forceExit",
     "test:watch": "jest --verbose --watch",
     "test:coverage": "jest --verbose --coverage",
     "start": "webpack --mode=development --watch",
