--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.0",
+    "file-loader": "^5.0.2",
     "jest": "^25.1.0",
     "supertest": "^4.0.2",
     "webpack": "^4.41.5",
