--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest --coverage --detectOpenHandles  --forceExit",
     "test:watch": "jest --verbose --watch",
     "test:coverage": "jest --verbose --coverage",
-    "build": "webpack --mode=development",
+    "build": "webpack",
     "dev:build": "webpack --mode=development --watch",
     "dev:start": "nodemon server/server.js",
     "start": "node server/server.js",
