--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-static-gzip": "^2.0.6",
     "faker": "^4.1.0",
     "mongodb": "^3.5.2",
     "mongoose": "^5.8.9",
@@ -46,6 +47,8 @@
     "@shelf/jest-mongodb": "^1.1.3",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
+    "brotli-webpack-plugin": "^1.1.0",
+    "compression-webpack-plugin": "^3.1.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
