db server changes

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.17.1",
     "express-static-gzip": "^2.0.6",
     "faker": "^4.1.0",
+    "fast-csv": "^4.1.0",
     "mongodb": "^3.5.2",
     "mongoose": "^5.8.9",
     "nodemon": "^2.0.2",
